<resources>
    <string name="app_name">Do You Even Plank</string>
    <string name="welcome_screen_message">Do You Even Plank?</string>

    <string name="network_required_prompt">You must be connected to the network in order to use this app.</string>
    <string name="network_settings_label">Go to network settings</string>

    <string name="menu">Menu</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="history">My History</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="open_source_attributions">Libraries we use</string>
    <string name="about">About</string>

    <string name="should_show_progress_bar_in_video_activity_message">Display progress bar during videos</string>

    <string name="support_message">Please send any inquiries to hello@doyouevenplank.com.</string>

    <string name="error_fetching_video_metadata">Error fetching video information. Please try again later.</string>
    <string name="error_youtube_player">YouTube player error: %1$s</string>

    <string name="error_no_videos_found_toast">Sorry, no videos found</string>
    <string name="video_preview_title_placeholder">Loading&#8230;</string>
    <string name="action_plank">Plank!</string>
    <string name="action_skip">Skip</string>
    <string name="pick_duration_header_message">How long can you plank?</string>
    <string name="countdown_info_popup_message">The timer will count you down from 3. When the video ends your plank is complete.</string>
    <string name="countdown_info_popup_confirmation">OK</string>

    <string name="video_countdown_begin_message">Plank!</string>
</resources>
